add_subdirectory(net_plugin)
add_subdirectory(kcp_plugin)
add_subdirectory(monitor_plugin)
add_subdirectory(http_plugin)
add_subdirectory(http_client_plugin)
add_subdirectory(chain_plugin)
add_subdirectory(chain_api_plugin)
add_subdirectory(chain_info_api_plugin)
add_subdirectory(producer_rpos_plugin)
add_subdirectory(wallet_plugin)
add_subdirectory(wallet_api_plugin)
add_subdirectory(txn_test_gen_plugin)
add_subdirectory(mongo_db_plugin)
add_subdirectory(sync_net_plugin)
add_subdirectory(sync_net_api_plugin)
add_subdirectory(state_history_plugin)
add_subdirectory(state_merkle_plugin)

# Forward variables to top level so packaging picks them up
set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_DEBIAN_PACKAGE_DEPENDS} PARENT_SCOPE)
